src/App.css
h3 {
  border-bottom: 1px solid #3f3f3f41;
}

.app {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  height: 100vh;
  background-color: #e5e7e941;
  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
}

.container {
  width: 40vw;
  min-width: 200px;
  border-radius: 0.3rem;
}

@media only screen and (max-width: 600px) {
  .container {
    width: 90vw;
    padding: 10% 0;
  }
}

.income-container {
  display: flex;
  justify-content: space-between;
  box-shadow: 0 1px 10px rgba(0, 0, 0, 0.2);
  margin: 0 auto;
  border-radius: 0.3rem;
}

.money {
  font-size: 1.5em;
  font-weight: bold;
}

.money-in {
  color: forestgreen;
}
.money-out {
  color: crimson;
}
.income {
  flex: 1;
  text-align: center;
}

.expense {
  border-left: 1px solid rgba(0, 0, 0, 0.2);
  flex: 1;
  text-align: center;
}

ul {
  padding: 0;
}

li {
  list-style: none;
  width: 100%;
  display: flex;
  align-items: center;
  margin: 5px 0;
  justify-content: space-between;
  padding: 5px;
}

.in {
  color: forestgreen;
  border-left: 3px solid forestgreen;
}

.out {
  border-left: 3px solid crimson;
  color: crimson;
}

.form-control {
  display: flex;
  justify-content: center;
  flex-direction: column;
  margin-bottom: 10%;
}

.label {
  font-weight: 400;
  margin-bottom: 5px;
}

input {
  height: 30px;
  padding-left: 5px;
}

.transaction-btn {
  width: 100%;
  height: 50px;
  text-align: center;
  background-color: rgb(0, 189, 95);
  color: #ffff;
  font-size: 1.2em;
  border: none;
  border-radius: 0.3rem;
}

